# context-is-key-forecasting

./: .eaiignore  .gitignore  README.md  compile_roi_results.py  convert_data.py  exp_launcher.py  precompute_scaling_cache.py  pyproject.toml  requirements.txt  run_baselines.py  simple_task_example.py  task_report.py  test_plot.py
benchmark/: .gitignore  .pre-commit-config.yaml  README.md  compile_roi_results.py  convert_caches.py  example_eval.py  example_lagllama.py  precompute_scaling_cache.py  pyproject.toml  requirements-dev.txt  requirements.txt  result_viewer.py  results_to_latex.py  run_baselines.py  simple_task_example.py  task_report.py  test_plot.py
benchmark/benchmark/: __init__.py  base.py  bivariate_categorical_causal.py  config.py  constrained_data_real_forecasts.py  constrained_forecasts.py  dummy_traffic.py  electricity_tasks.py  evaluation.py  memorization_mitigation.py  misleading_history.py  nn5_tasks.py  pred_change_tasks.py  predictable_constraints_real_data.py  predictable_grocer_shocks.py  predictable_spikes_in_pred.py  predictable_stl_shocks.py  sensor_maintenance.py  short_history.py  utils.py
benchmark/benchmark/baselines/: base.py  chronos.py  crazycast.py  direct_prompt.py  gpt_processes.py  lag_llama.py  llm_processes.py  moirai.py  naive.py  nixtla.py  r_forecast.py  statsmodels.py  timellm.py  unitime.py  utils.py
benchmark/benchmark/data/: dominicks.py  pems.py  traffic_downloader.py
benchmark/benchmark/metrics/: constraints.py  crps.py  region_of_interest_metric.py  reigon_of_interest_metric.py  roi_metric.py  scaling_cache.py
benchmark/benchmark/tasks/: bivariate_categorical_causal.py  causal_chambers.py  constrained_forecasts.py  electricity_tasks.py  fred_county_tasks.py  montreal_fire.py  nn5_tasks.py  nsrdb_tasks.py  pems_tasks.py  pred_change_tasks.py  predictable_constraints_real_data.py  predictable_grocer_shocks.py  predictable_stl_shocks.py  sensor_maintenance.py  short_history.py  solar_tasks.py  traffic_tasks.py
benchmark/benchmark/utils/: __init__.py  cache.py  causal.py  plot.py
benchmark/experiments/: README.md  cc-gpt4o-mini-ctx_c1.json  cc-llama31-405b-noctx_c1.json  fast_0.json  fast_c40.json  gpt4o-ctx_c1.json  gpt4o-mini-ctx_c1.json  gpt4o-mini-noctx_c1.json  gpt4o-noctx_c1.json  killall.sh  llama3-8b-ctx_g1.json  llama3-8b-instruct-ctx_g1.json  llama3-8b-instruct-noctx_g1.json  llama3-8b-noctx_1.json  llama3-8b-noctx_g1.json  llama31-405b-ctx_c1.json  make_summary.sh  moirai_base_g1.json  phi-mini-ctx_g3.json  phi-mini-noctx_g3.json  r_forecast_c40.json  timegen1_c40.json  timellm_g1.json  unitime_g1.json
benchmark/experiments/direct-prompt-models/: cc-gpt4o-ctx_c1.json  cc-gpt4o-mini-noctx_c1.json  cc-llama31-405b-ctx-temp10_c1.json  cc-llama31-405b-no-ctx-temp10_c1.json  openrouter_llama_70b_instruct_ctx_c1.json  openrouter_llama_70b_instruct_noctx_c1.json  openrouter_llama_8b_instruct_ctx_c1.json  openrouter_llama_8b_instruct_noctx_c1.json  openrouter_mixtral_8x7b_instruct_ctx_c1.json  openrouter_mixtral_8x7b_instruct_noctx_c1.json
benchmark/experiments/foundation-models/: chronos_small_g1.json  lag_llama_g1.json
benchmark/experiments/lane_closure_tests/: llama3-70b-instruct-ctx_g8.json
benchmark/experiments/llmp-models/: llama3-70b-ctx_g8.json  (+2 more)
benchmark/notebooks/: crps_covariance.ipynb
benchmark/scripts/: compile_stderr_results.py  results_to_latex.py  results_to_rank.py
benchmark/tests/: bootstrap_datasets.py  test_baseline_consistency.py  test_cache.py  test_causal_chambers.py  test_crps.py  test_datetime_utils.py  test_random_generation.py  test_task_consistency.py
(+114 files in other folders)
